switched to mongodb,added frontend js to create new hiders, next need to input pictures,and toggle if hider has been found

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-password='Dartagnan19@'
+title = "mysql clearDB credentials"
+
+cleardb_str = "mysql://bde8974ff6848a:f82355c4@us-cdbr-east-06.cleardb.net/heroku_03c2a5e7c8a7f77?reconnect=true"
+HOST = "us-cdbr-east-06.cleardb.net"
+USER = "bde8974ff6848a"
+PASSWORD = "f82355c4"
+DB_NAME = "heroku_03c2a5e7c8a7f77"
+
+
+new_title = "MongoDB"
+mongo_url = "mongodb+srv://DartSams:Dartagnan_19@personal-db.tz6mo.mongodb.net/?retryWrites=true&w=majority"
+mongo_username = "DartSams"
+mongo_password = "Dartagnan_19"
